compiler-core/src/go/tests/snapshots/gleam_core__go__tests__custom_types__qualified.snap
---
source: compiler-core/src/go/tests/custom_types.rs
expression: "import other\n\npub fn main() {\n  other.One\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
import other

pub fn main() {
  other.One
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  other_P "example.com/todo/thepackage/other"
)

const _ = gleam_P.Use_Import
const _ = other_P.Use_Import
const Use_Import byte = 0

func Main() other_P.One_t {
  return other_P.One_c{}
}
